# ftswarm.py

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build_docs.yml
docs/: index.md  quickstart.md
swarm/: __init__.py  serialhandler.py  swarm.py
tests/: __init__.py  test_swarm.py
