[tool.poetry]
name = "ftswarm.py"
version = "1.2.1"
description = "A Python library for the ftSwarm Python API"
authors = ["bergschneider <magiclake@gmx.de>"]
readme = "README.md"
documentation = "https://bloeckchengrafik.de/ftswarm.py/"

license = "MIT"
packages = [
    { include = "swarm" },
]

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "^3.5"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.2"
mkdocs-material = "^7.3.2"
pdoc3 = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
